# datahub-actions-kubernetes

./: .editorconfig  .gitignore  README.md  pyproject.toml
config/: executor.yaml
datahub_kubernetes/executor/execution/: kubernetes_pod_ingestion_task.py  utils.py
